Set overflow to visible (possible FF fix?)

--- a/src/scss/utilities/_print.scss
+++ b/src/scss/utilities/_print.scss
@@ -297,6 +297,7 @@
       display: block!important;
       height: auto!important;
       padding-top: 1rem!important;
+      overflow: visible!important;
     }
   }
 
